--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -40,6 +40,14 @@
     "appAuthorUri": "http://anotherguru.me/",
     "appLicense": "proprietary",
     "ideaDeploymentServer": "WP Plugins",
-    "appClass": "Plugin"
+    "appClass": "Plugin",
+    "consolePages": [
+      "doorkeeper"
+    ],
+    "controllers": {
+      "Admin": [
+        "doorkeeper"
+      ]
+    }
   }
 }
